--- a/src/scss/reset.css
+++ b/src/scss/reset.css
@@ -29,3 +29,5 @@ input:focus::placeholder,textarea:focus::placeholder,input:focus::-webkit-input-
 input:focus:-moz-placeholder,textarea:focus:-moz-placeholder,input:focus::-moz-placeholder,textarea:focus::-moz-placeholder,
 input:focus:-ms-input-placeholder,textarea:focus:-ms-input-placeholder { color:transparent !important; }
 
+
+input[type='checkbox']{ display: none;}
